Add application router logic

--- a/search/index.html
+++ b/search/index.html
@@ -21,17 +21,17 @@
 
   <main class="app">
     <header>
-      <h1>State-O</h1>
+      <h1 class="home-button">State-O</h1>
     </header>
 
-    <section class="center ">
+    <section class="center search-page">
 
       <h1>Search for state-owned enterprises:</h1>
 
       <form>
         <fieldset>
           <input class="search" type="search" autofocus>
-          <button class="button" type="button">
+          <button class="search-button" type="button">
             <div>
               <span>Search</span>
             </div>
@@ -42,19 +42,20 @@
       <article class="info row">
         <div class="col-1-2 padding-right">
           <h2>Why?</h2>
-          <p>State-O aims to shed light on stated-owned enterprises and offers information in a simple searchable database. More and more public services are privatized and there are many known cases of state-owned or partially state-owned companies being involved in scandals and shady business.
-          </p>
+          <p>State-O aims to shed light on stated-owned enterprises and offers information in a simple searchable database. More and more public services are privatized and there are many known cases of state-owned or partially state-owned companies being involved in scandals and shady business.</p>
         </div>
         <div class="col-1-2">
           <h2>Help us!</h2>
-          <p>
-          Information about publicly owned companies and public private partnerships is many times hidden in PDFs published by government bodies, city councils or other public sources. Help us by <a href="mailto:foo@bar">sending us data about state owned companies</a> so we can expand State-O and build a database for SOCs all over Europe!
-          </p>
+          <p>Information about publicly owned companies and public private partnerships is many times hidden in PDFs published by government bodies, city councils or other public sources. Help us by <a href="mailto:foo@bar">sending us data about state owned companies</a> so we can expand State-O and build a database for SOCs all over Europe!</p>
         </div>
       </article>
     </section>
 
-    <section id="results" class="results center"></section>
+    <section class="center result-page">
+      <article class="info">
+        <h2 class="company-titel">Bundesblablala</h2>
+      </article>
+    </section>
   </main>
 
   <footer>
