Add result loading

--- a/search/index.html
+++ b/search/index.html
@@ -21,7 +21,10 @@
 
   <main class="app">
     <header>
-      <h1 class="home-button">State-O</h1>
+      <div class="home-button">
+        <img class="logo" src="logo.svg">
+        <h1>State-O</h1>
+      </div>
     </header>
 
     <section class="center search-page">
@@ -33,7 +36,7 @@
           <input class="search" type="search" autofocus>
           <button class="search-button" type="button">
             <div>
-              <span>Search</span>
+              <span>Search <img src='search.svg'></span>
             </div>
           </button>
         </fieldset>
