Add demo data and demo graph image

--- a/search/index.html
+++ b/search/index.html
@@ -29,7 +29,7 @@
 
     <section class="center search-page">
 
-      <h1>Search for state-owned enterprises:</h1>
+      <h2>Search for state-owned enterprises:</h2>
 
       <form>
         <fieldset>
@@ -56,7 +56,7 @@
 
     <section class="center result-page">
       <article class="info result">
-        <h2 class="company-titel">Bundesblablala</h2>
+        <h2>Something went terribly wrong. Release the kittens!</h2>
       </article>
     </section>
   </main>
